<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>9</version>
    </parent>

    <groupId>dev.morphia.morphia</groupId>
    <artifactId>morphia</artifactId>
    <version>2.0.2</version>
    <packaging>pom</packaging>

    <name>Morphia</name>
    <url>https://github.com/MorphiaOrg/morphia</url>

    <scm>
        <connection>scm:git:git@github.com:MorphiaOrg/morphia.git</connection>
        <developerConnection>scm:git:git@github.com:MorphiaOrg/morphia.git</developerConnection>
        <url>git@github.com:MorphiaOrg/morphia.git</url>
    </scm>

    <pluginRepositories>
        <pluginRepository>
            <id>snapshots</id>
            <name>Maven Central Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <awaitility.version>1.7.0</awaitility.version>
        <bottlerocket.version>0.10</bottlerocket.version>
        <driver.version>4.0.5</driver.version>
        <json.assert.version>1.2.3</json.assert.version>
        <maven.version>3.6.2</maven.version>
        <revapi.maven.plugin.version>0.11.4</revapi.maven.plugin.version>
        <revapi.java.version>0.20.1</revapi.java.version>
        <slf4j.version>1.7.30</slf4j.version>
        <sofia.version>0.23</sofia.version>
        <surefire.version>3.0.0-M5</surefire.version>
        <zt.exec.version>1.10</zt.exec.version>
        <junit.version>4.13</junit.version>
        <junit5.version>5.6.2</junit5.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <source>8</source>
                        <target>8</target>
                        <compilerArgument>-proc:none</compilerArgument>
                        <compilerArgument>-Xlint:deprecation</compilerArgument>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-report-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <configuration>
                        <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>${surefire.version}</version>
                <configuration>
                    <alwaysGenerateSurefireReport>true</alwaysGenerateSurefireReport>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>3.1.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.8.2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.0.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.0.0-M1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <failOnError>false</failOnError>
                    <excludePackageNames>org.bson, *.internal, dev.morphia.sofia, dev.morphia.utils</excludePackageNames>
                    <subpackages>dev.morphia</subpackages>
                    <doclint>none</doclint>
                    <doctitle>Morphia ${project.version}</doctitle>
                    <windowtitle>Morphia</windowtitle>
                    <tagletArtifacts>
                        <tagletArtifact>
                            <groupId>${project.groupId}</groupId>
                            <artifactId>util</artifactId>
                            <version>${project.version}</version>
                        </tagletArtifact>
                    </tagletArtifacts>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <modules>
        <module>build-plugins</module>
        <module>util</module>
        <module>morphia</module>
        <module>legacy-tests</module>
<!--        <module>no-proxy-deps-tests</module>-->
        <module>examples</module>
    </modules>
</project>
